[gd_scene load_steps=13 format=3 uid="uid://rfxd6a0f3352"]

[ext_resource type="Script" path="res://Scenes/character_2.gd" id="1_fh06t"]
[ext_resource type="Texture2D" uid="uid://dk3j75u0k7kbd" path="res://Assets/char2.png" id="1_jcb6v"]
[ext_resource type="Texture2D" uid="uid://cv6oh6n0q0pvi" path="res://Assets/char2-idle.png" id="2_e5sgs"]
[ext_resource type="AudioStream" uid="uid://c2qleoawhleo7" path="res://Assets/Audio/jump.wav" id="2_ghsah"]
[ext_resource type="AudioStream" uid="uid://blfb5mves6t1p" path="res://Assets/Audio/select_004.ogg" id="4_s2nhb"]
[ext_resource type="AudioStream" uid="uid://bpc08s3gg45df" path="res://Assets/Audio/question_003.ogg" id="5_fjmb3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xaptb"]
atlas = ExtResource("2_e5sgs")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2yod"]
atlas = ExtResource("2_e5sgs")
region = Rect2(18, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqi54"]
atlas = ExtResource("1_jcb6v")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5j2d"]
atlas = ExtResource("1_jcb6v")
region = Rect2(18, 0, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ydkd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaptb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2yod")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqi54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5j2d")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_72rfm"]
radius = 29.0
height = 68.0

[node name="Character2" type="CharacterBody2D"]
script = ExtResource("1_fh06t")

[node name="sprite1" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(36, 36)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_3ydkd")
autoplay = "default"
frame = 1
frame_progress = 0.795902

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(34, 38)
shape = SubResource("CapsuleShape2D_72rfm")

[node name="RayCast2D_DOWN" type="RayCast2D" parent="."]
position = Vector2(29, 72)
target_position = Vector2(0, 17)

[node name="RayCast2D_RIGHT" type="RayCast2D" parent="."]
position = Vector2(29, 38)
target_position = Vector2(57, 12)

[node name="RayCast2D_UP" type="RayCast2D" parent="."]
position = Vector2(29, 39)
target_position = Vector2(-1, -66)

[node name="RayCast2D_LEFT" type="RayCast2D" parent="."]
position = Vector2(29, 38)
target_position = Vector2(-47, 14)

[node name="RayCast2D_DIAG_R" type="RayCast2D" parent="."]
position = Vector2(41, 17)
target_position = Vector2(60, -44)

[node name="RayCast2D_DIAG_L" type="RayCast2D" parent="."]
position = Vector2(24, 16)
target_position = Vector2(-43, -41)

[node name="RayCast2D_DIAG_RD" type="RayCast2D" parent="."]
position = Vector2(56, 38)
target_position = Vector2(64, 113)

[node name="RayCast2D_DIAG_LD" type="RayCast2D" parent="."]
position = Vector2(12, 37)
target_position = Vector2(-94, 114)

[node name="sfx_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ghsah")
bus = &"SFX"

[node name="sfx_pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_s2nhb")
bus = &"SFX"

[node name="sfx_use" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fjmb3")
bus = &"SFX"
